schema is now created, working to code it

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,3 +7,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .icon-field-left {
+        @apply h-6 w-6;
+    }
+}
